# gargoyle-pocketbook-port

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fix-linkage.patch  gargoyle.app
3rd-parties/: .gitignore  crossfile_arm.ini.in  env_set.sh  harfbuzz-8.5.0.tar.xz.sha256  v1.1.0.zip.sha256
patchs/: fix-missing-pair-constructor.patch
scripts/: install-3rd-parties.sh  install-sdk.sh
